--- a/languages/eawp-de_DE.po
+++ b/languages/eawp-de_DE.po
@@ -1,11 +1,9 @@
-#, fuzzy
 msgid ""
 msgstr ""
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Project-Id-Version: Simple Marketplace Affiliate\n"
 "POT-Creation-Date: 2017-02-08 00:00+0100\n"
-"PO-Revision-Date: 2017-02-08 00:00+0100\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2017-02-08 00:01+0100\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,75 +15,79 @@ msgstr ""
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
 "esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"Last-Translator: \n"
+"Language: de_DE\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: includes/options.php:12 includes/options.php:13 templates/options.php:3
 msgid "Envato Affiliate"
-msgstr ""
+msgstr "Simple Marketplace Affiliate"
 
 #: simple-marketplace-affiliate.php:119
 msgid "Es wurde kein Token angegeben. Siehe in den Einstellungen nach."
-msgstr ""
+msgstr "Es wurde kein Token angegeben. Siehe in den Einstellungen nach."
 
 #: simple-marketplace-affiliate.php:123
 msgid "Es wurde kein Produkt gefunden."
-msgstr ""
+msgstr "Es wurde kein Produkt gefunden."
 
 #: simple-marketplace-affiliate.php:168
 msgid "Es wurde kein Produkt angegeben."
-msgstr ""
+msgstr "Es wurde kein Produkt angegeben."
 
 #: templates/ajax.php:27
 #, php-format
 msgid "Von %s"
-msgstr ""
+msgstr "Von %s"
 
 #: templates/ajax.php:43
 msgid "Mehr erfahren"
-msgstr ""
+msgstr "Mehr erfahren"
 
 #: templates/options.php:19
 msgid "API"
-msgstr ""
+msgstr "API"
 
 #: templates/options.php:25
 msgid "Allgemein"
-msgstr ""
+msgstr "Allgemein"
 
 #: templates/options.php:45
 msgid "Links & Support"
-msgstr ""
+msgstr "Links & Support"
 
 #: templates/options.php:47
 msgid ""
 "Du hast Fragen oder Verbesserungsvorschl&auml;ge? Zögere nicht und schreibe "
 "uns. Wir sind fast rund um die Uhr am PC."
 msgstr ""
+"Du hast Fragen oder Verbesserungsvorschl&auml;ge? Z&ouml;gere nicht und "
+"schreibe uns. Wir sind fast rund um die Uhr am PC."
 
 #: templates/options.php:50
 msgid "Plugin-Website"
-msgstr ""
+msgstr "Plugin-Website"
 
 #: templates/options.php:51
 msgid "Github"
-msgstr ""
+msgstr "Github"
 
 #: templates/options.php:52
 msgid "Changelog"
-msgstr ""
+msgstr "Changelog"
 
 #: templates/options.php:53
 msgid "Support"
-msgstr ""
+msgstr "Support"
 
 #: templates/options/api.php:8
 msgid "Envato Marktplatz"
-msgstr ""
+msgstr "Envato Marktplatz"
 
 #: templates/options/api.php:9
 msgid "hier einen persönlichen Token anfordern"
-msgstr ""
+msgstr "hier einen persönlichen Token anfordern"
 
 #: templates/options/api.php:10
 #, php-format
@@ -93,56 +95,61 @@ msgid ""
 "Hier musst Du Einstellungen für die Verbindung zur Envato API vornehmen. Um "
 "die API verwenden zu können, musst Du ein Envato Konto erstellt haben und %s."
 msgstr ""
+"Hier musst Du Einstellungen für die Verbindung zur Envato API vornehmen. Um "
+"die API verwenden zu können, musst Du ein Envato Konto erstellt haben und %s."
 
 #: templates/options/api.php:11
 #, php-format
 msgid ""
 "Deine Affiliate-ID erhälst Du in einem beliebigen %s unter \"Affiliate\"."
 msgstr ""
+"Deine Affiliate-ID erhälst Du in einem beliebigen %s unter \"Affiliate\"."
 
 #: templates/options/api.php:15
 msgid "Envato API"
-msgstr ""
+msgstr "Envato API"
 
 #: templates/options/api.php:26
 msgid "Pers&ouml;nlicher Token"
-msgstr ""
+msgstr "Pers&ouml;nlicher Token"
 
 #: templates/options/api.php:29
 #, php-format
 msgid "Wenn Du noch keinen Token hast, kannst Du %s."
-msgstr ""
+msgstr "Wenn Du noch keinen Token hast, kannst Du %s."
 
 #: templates/options/api.php:33
 msgid "Affiliate-ID"
-msgstr ""
+msgstr "Affiliate-ID"
 
 #: templates/options/api.php:36
 msgid ""
 "F&uuml;ge hier Deine pers&ouml;nliche Envato Affiliate-ID ohne <code>?ref=</"
 "code> Tag ein."
 msgstr ""
+"F&uuml;ge hier Deine pers&ouml;nliche Envato Affiliate-ID ohne <code>?ref=</"
+"code> Tag ein."
 
 #: templates/options/general.php:10
 msgid "Allgemeine Einstellungen"
-msgstr ""
+msgstr "Allgemeine Einstellungen"
 
 #: templates/options/general.php:12
 msgid "Hier kannst Du allgemeine Einstellungen für das Plugin vornehmen."
-msgstr ""
+msgstr "Hier kannst Du allgemeine Einstellungen für das Plugin vornehmen."
 
 #: templates/options/general.php:21
 msgid "Shortcode"
-msgstr ""
+msgstr "Shortcode"
 
 #. Plugin Name of the plugin/theme
 msgid "Simple Marketplace Affiliate"
-msgstr ""
+msgstr "Simple Marketplace Affiliate"
 
 #. Plugin URI of the plugin/theme
 #. Author URI of the plugin/theme
 msgid "https://devhats.de"
-msgstr ""
+msgstr "https://devhats.de"
 
 #. Description of the plugin/theme
 msgid ""
@@ -150,7 +157,10 @@ msgid ""
 "ein und setze in den Optionen deinen Affiliate Tag, um auch noch Geld damit "
 "zu verdienen."
 msgstr ""
+"Binde mit Shortcodes beliebige Envato Produkte auf Deiner WordPress Seite "
+"ein und setze in den Optionen Deinen eigenen Affiliate Tag, um auch noch "
+"Geld damit zu verdienen."
 
 #. Author of the plugin/theme
 msgid "DEVHATS"
-msgstr ""
+msgstr "DEVHATS"
